<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:text="@string/title_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project1"
        android:id="@+id/button"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#F08C35"
        android:minWidth="300dp"
        android:onClick="projectBtnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project2"
        android:id="@+id/button2"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="300dp"
        android:onClick="projectBtnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project3"
        android:id="@+id/button3"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="300dp"
        android:onClick="projectBtnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project4"
        android:id="@+id/button4"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="300dp"
        android:onClick="projectBtnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project5"
        android:id="@+id/button5"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:minWidth="300dp"
        android:onClick="projectBtnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project6"
        android:id="@+id/button6"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="#CB1541"
        android:minWidth="300dp"
        android:onClick="projectBtnClick"/>

</RelativeLayout>
